--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,45 +4,26 @@ on: [push, pull_request]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-
-      - name: Install Chrome and dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget
-          # Скачиваем Chrome
-          wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          # Устанавливаем Chrome (исправленная команда!)
-          sudo apt-get install -y ./google-chrome-stable_current_amd64.deb
-          # Удаляем скачанный файл
-          rm -f google-chrome-stable_current_amd64.deb
-          # Проверяем установку
-          google-chrome --version
-
       - name: Start SUT
-        run: |
-          # Запускаем сервер в фоне
-          java -jar ./artifacts/app-card-delivery.jar &
-          # Даем серверу время запуститься
-          sleep 10
-          # Проверяем что сервер запустился
-          curl -s -f http://localhost:9999 && echo "✅ Server is responding" || echo "⚠️ Server might still be starting"
-
+        # Запускаем SUT,
+        # имя файла SUT будет отличаться в каждой задаче.
+        # & означает, что в фоновом режиме не блокируем терминал для запуска тестов,
+        # обязательно должен быть для запуска SUT в CI
+        run: java -jar C:\Users\dragon-chan\Documents\javaprojects\javaqa-homework-17\artifacts\app-card-delivery.jar &
       - name: Build with Gradle
-        run: |
-          # Добавляем CI-specific параметры
-          ./gradlew test --info \
-            -Dselenide.headless=true \
-            -Dchromeoptions.args="--no-sandbox,--disable-dev-shm-usage,--window-size=1920x1080"
+        # Запускаем автотесты
+        # Для проектов на базе Selenide необходимо добавить параметр для запуска браузера
+        # в headless режиме -Dselenide.headless=true, параметр --info должен остаться
+        run: ./gradlew test --info
